--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -1,47 +1,19 @@
 \chapter{Introduction}
 
-\section{Complexity of Matrix Multiplication}
+\section{Language Models}
+\label{sec:language_models}
 
-Matrix multiplication is a fundamental operation in many computational tasks, including neural networks. The complexity of multiplying two matrices depends on their dimensions. Let's dive into the specifics.
+\section{Pre-Training}
+\label{sec:language_models}
 
-\begin{itemize}
-	\item Let \(A\) be a matrix of size \(m \times k\).
-	\item Let \(B\) be a matrix of size \(k \times n\).
-	\item The result \(C\) will be a matrix of size \(m \times n\).
-\end{itemize}
+This achievement is largely motivated by pre-training: we separate common components from many neural network-based systems, and then train them on huge amounts of unlabeled data using self-supervision. These pre-trained models serve as foundation models that can be easily adapted to different tasks via fine-tuning or prompting. As a result, the paradigm of NLP has been enormously changed. In many cases, large-scale supervised learning for specific tasks is no longer required, and instead, we only need to adapt pre-trained foundation models.
 
-\paragraph{Standard Matrix Multiplication:} For each element \(c_{ij}\) in the resulting matrix \(C\):
-\[ c_{ij} = \sum_{l=1}^{k} a_{il} \cdot b_{lj} \]
+The discussion of pre-training issues in NLP typically involves two types of problems: sequence
+modeling (or sequence encoding) and sequence generation.
 
-This involves:
-\begin{itemize}
-	\item Multiplications: \(k\) multiplications for each element \(c_{ij}\).
-	\item Additions: \(k-1\) additions for each element \(c_{ij}\).
-\end{itemize}
+Optimizing $\theta$ on a pre-training task. Unlike standard learning problems in NLP, pre-training
+does not assume specific downstream tasks to which the model will be applied. Instead, the goal is to train a model that can generalize across various tasks.
 
-\paragraph{Complexity}
-\begin{itemize}
-	\item The total number of elements in \(C\) is \(m \times n\).
-	\item Therefore, the total number of multiplications is \(m \times n \times k\).
-	\item The total number of additions is \(m \times n \times (k-1)\).
-\end{itemize}
-
-Thus, the total complexity is \(O(m \times n \times k)\).
-
-Even though there are several advanced methods, the standard \(O(m \times n \times k)\) complexity is often used in practice, due to the simplicity and efficiency of implementation on modern hardware. Optimized libraries (like BLAS, cuBLAS for GPUs) leverage hardware-specific optimizations to improve practical performance.
-
-% \subsection{Complexity in Neural Networks}
-
-% In the context of neural networks:
-% \begin{itemize}
-% 	\item Input Matrices: Weight matrices and input feature vectors.
-% 	\item Typical Sizes:
-% 		\begin{itemize}
-% 			\item Weight matrix: \(d \times d_{in}\) for RNNs, \(d \times d\) for Transformers.
-% 			\item Input/Output vectors: Usually batch-processed, leading to sizes like \(batch\_size \times sequence\_length \times feature\_size\).
-% 		\end{itemize}
-% \end{itemize}
-
-
+Applying the pre-trained model to downstream tasks. To adapt the model to these tasks, we need to adjust the parameters slightly using labeled data or prompt the model with task descriptions.
 
 
