--- a/sections/transformers/transformers.tex
+++ b/sections/transformers/transformers.tex
@@ -3,3 +3,4 @@
 \input{./sections/transformers/positional_embedding}
 \input{./sections/transformers/enc_dec}
 \input{./sections/transformers/inference}
+\input{./sections/transformers/examples}
