--- a/main.tex
+++ b/main.tex
@@ -94,6 +94,8 @@
 \include{./sections/intro}
 \part{Transformers}
 \include{./sections/transformers/transformers}
+\part{Advanced}
+\include{./sections/advanced/lora}
 
 \backmatter
 % bibliography, glossary and index would go here.
