--- a/main.tex
+++ b/main.tex
@@ -94,8 +94,11 @@
 \include{./sections/intro}
 \part{Transformers}
 \include{./sections/transformers/transformers}
+\part{Post-Training}
+\include{./sections/post_train/preference}
 \part{Advanced}
-\include{./sections/advanced/lora}
+% \include{./sections/advanced/lora}
+% \include{./sections/advanced/compression}
 
 \backmatter
 % bibliography, glossary and index would go here.
