--- a/sections/advanced/lora.tex
+++ b/sections/advanced/lora.tex
@@ -1,3 +1,5 @@
+\chapter{Parameter-Efficient Fine-Tuning}
+
 \section{LoRA}
 LoRA (Low-Rank Adaptation) is a popular method under the umbrella of Parameter-Efficient Fine-Tuning (PEFT). Instead of updating all the parameters of a large pre-trained model during fine-tuning, LoRA only learns a small number of additional parameters that capture task-specific adjustments. This approach makes the training more memory‐ and compute‐efficient while often achieving comparable performance to full fine-tuning.
 
