--- a/sections/transformers/enc_dec.tex
+++ b/sections/transformers/enc_dec.tex
@@ -1,6 +1,7 @@
 % \subsection{Skip Connection}
 % This is a regularization technique.
 
+\chapter{Encoder-Decoder}
 \section{Encoder-Decoder}
 % \label{sec:}
 
