--- a/sections/transformers/transformers.tex
+++ b/sections/transformers/transformers.tex
@@ -1,6 +1,6 @@
-\chapter{Transformer}
+% \chapter{Transformer}
 \input{./sections/transformers/attention}
-\input{./sections/transformers/positional_embedding}
-\input{./sections/transformers/enc_dec}
 \input{./sections/transformers/inference}
-\input{./sections/transformers/examples}
+% \input{./sections/transformers/examples}
+\input{./sections/transformers/positional/positional_embedding}
+\input{./sections/transformers/enc_dec}
