--- a/main.tex
+++ b/main.tex
@@ -98,16 +98,15 @@
 \newpage
 
 \mainmatter
-\part{Introduction}
+\part{Natural Language Processing}
 \include{./sections/intro}
-\part{Classical NLP}
 \include{./sections/nlp/nlp}
 \part{Transformers}
 \include{./sections/transformers/transformers}
 \part{Post-Training}
 \include{./sections/post_train/preference}
 \part{Advanced}
-% \include{./sections/advanced/lora}
+\include{./sections/advanced/agents}
 % \include{./sections/advanced/compression}
 
 \backmatter
