--- a/sections/nlp/nlp.tex
+++ b/sections/nlp/nlp.tex
@@ -1,4 +1,4 @@
-\chapter{Introduction}
+\chapter{Basics}
 \input{./sections/nlp/metrics}
 \input{./sections/nlp/rule_based_nlp}
 \input{./sections/nlp/label_smoothing}
