--- a/main.tex
+++ b/main.tex
@@ -95,7 +95,9 @@
 \part{Transformers}
 \include{./sections/transformers/transformers}
 \part{Advanced}
-\include{./sections/advanced/lora}
+% \include{./sections/advanced/lora}
+\include{./sections/advanced/reasoning}
+\include{./sections/advanced/agents}
 
 \backmatter
 % bibliography, glossary and index would go here.
